revamped UI, fixed cron jobs, fixed timezone issues, fixed API documentation, fixed status page,
